# dice-embeddings

./: .buildinfo  .coveragerc  .dockerignore  .gitignore  Dockerfile  LICENSE  MANIFEST.in  Makefile  RALP_README.MD  README.md  analyse_experiments.py  classes.dot  collect_results_from_logs.py  complex-query-answering-results.md  complex_query_answering.py  complex_query_generation.py  config_runner.sh  continual_training.py  continuous_training.py  create_queries.py  dat2vecUMLS.py  dataset.py  dependencies.sh  deploy.py  dicee.html  dicee.models.html  dicee.read_preprocess_save_load_kg.html  dicee.trainer.html  environment.yml  executer.py  experiments.sh  funcs.py  genindex.html  index.html  instance_predictor.py  interactive_kge.py  large_scale_training.py  main.py  mappings.py  models.py  (+32 more)
DBpedia_experiments/: ReadMe.html
KGEonTabular/: README.html
KGs/: README
RALP_MPRO_Optimized_light/: Countries-S1_predictor_temp_0.0.json  Countries-S1_predictor_temp_0.1.json  Countries-S1_predictor_temp_0.2.json  Countries-S1_predictor_temp_0.3.json  Countries-S1_predictor_temp_0.4.json  Countries-S1_predictor_temp_0.5.json  Countries-S1_predictor_temp_0.6.json  Countries-S1_predictor_temp_0.7.json  Countries-S1_predictor_temp_0.8.json  Countries-S1_predictor_temp_0.9.json  Countries-S2_predictor_temp_0.1.json  Countries-S2_predictor_temp_0.2.json  Countries-S2_predictor_temp_0.3.json  Countries-S2_predictor_temp_0.4.json  Countries-S2_predictor_temp_0.5.json  Countries-S2_predictor_temp_0.7.json  Countries-S2_predictor_temp_0.8.json  Countries-S3_predictor_temp_0.0.json  (+9 more)
(+37901 files in other folders)
