[project]
name = "dicee"
requires-python = ">=3.9.18"
version="0.1.0"
authors = [
  { name="Caglar Demir", email="caglardemir8@gmail.com" },
]
description="Dice embedding is an hardware-agnostic framework for large-scale knowledge graph embedding applications"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


[project.urls]
"Homepage" = "https://github.com/dice-group/dice-embeddings"
"Bug Tracker" = "https://github.com/dice-group/dice-embeddings/issues"


[tool.ruff]
# Decrease the maximum line length to 79 characters.
line-length = 130
src = ["src"]

[tool.ruff.pydocstyle]
convention = "google"
